// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MoneyInput /> disabled w/ a min of 1 and max of 5 1`] = `
<div
  className="input-group"
>
  <div
    className="input-group-addon"
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
      }
    }
  >
    <i
      className="far fa-dollar-sign"
    />
  </div>
  <input
    className="apm-mi-form-control"
    disabled={true}
    max={5}
    min={1}
    onBlur={[Function]}
    onChange={[Function]}
    type="number"
    value=""
  />
</div>
`;

exports[`<MoneyInput /> where props.value is pi 1`] = `
<div
  className="input-group"
>
  <div
    className="input-group-addon"
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
      }
    }
  >
    <i
      className="far fa-dollar-sign"
    />
  </div>
  <input
    className="apm-mi-form-control"
    onBlur={[Function]}
    onChange={[Function]}
    type="number"
    value={3.14}
  />
</div>
`;

exports[`<MoneyInput /> with a custom className 1`] = `
<div
  className="input-group"
>
  <div
    className="input-group-addon"
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
      }
    }
  >
    <i
      className="far fa-dollar-sign"
    />
  </div>
  <input
    className="apm-mi-form-control custom-class"
    onBlur={[Function]}
    onChange={[Function]}
    type="number"
    value=""
  />
</div>
`;

exports[`<MoneyInput /> with no props 1`] = `
<div
  className="input-group"
>
  <div
    className="input-group-addon"
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
      }
    }
  >
    <i
      className="far fa-dollar-sign"
    />
  </div>
  <input
    className="apm-mi-form-control"
    onBlur={[Function]}
    onChange={[Function]}
    type="number"
    value=""
  />
</div>
`;
